--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
                 run: docker pull adheil/myciimage:latest
 
             -   name: SSH into EC2 instance and deploy
-                uses: appleboy/ssh-action@master
+                uses: appleboy/ssh-action@v.0.1.3
                 with:
                   host: ${{ secrets.EC2_HOST }}
                   username: ${{ secrets.EC2_USERNAME }}
